Fix hero title gradient shadow overflow

--- a/Src/Csn.Retail.Editorial.Web/Features/Details/Assets/Css/Modules/Content/_article.scss
+++ b/Src/Csn.Retail.Editorial.Web/Features/Details/Assets/Css/Modules/Content/_article.scss
@@ -285,6 +285,10 @@
     width: $screen-sm;
     margin: auto;
 
+    @include breakpoint($screen-md) {
+        width: $screen-md;
+    }
+
     @include breakpoint($screen-lg) {
         width: $screen-lg;
     }
